# eurokids-edge-capture

./: .env.example  .gitignore  README.md  cameras-local.yaml  cameras.example.yaml  config.example.yaml  pyproject.toml
capture_collector/: __init__.py  __main__.py  camera_worker.py  config.py  schedule.py  uploader.py
deploy/: eurokids-capture.service
