[project]
name = "eurokids-edge-capture"
version = "0.1.0"
description = "RTSP frame sampler for Eurokids POC training data (S3/R2)"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34.0",
  "PyYAML>=6.0.1",
]

[project.scripts]
eurokids-capture = "capture_collector.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["capture_collector*"]
